--- a/style.css
+++ b/style.css
@@ -27,21 +27,24 @@ header .header-flex {
     justify-content: space-between;
 }
 header h1 {
-    height: 80px;
+    min-height: 80px;
     padding: 8px 0;
     margin-right: 1em;
     line-height: 80px;
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
 }
 header h1 img {
     display: block;
     width: auto;
-    height: 64px;
+    max-width: 100%;
+    max-height: 64px;
+    margin-right: 20px;
 }
 header h1 small {
     display: block;
     height: 100%;
-    padding: 32px 0 0 10px;
     font-size: .5em;
     color: rgba(255, 255, 255, .7);
     font-weight: normal;
@@ -50,6 +53,7 @@ header h1 small {
 }
 header ul {
     display: flex;
+    flex-wrap: wrap;
     height: 100%;
     padding: 8px 0;
     list-style: none;
@@ -85,6 +89,7 @@ header ul li a:hover {
 .row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: stretch;
 }
 .row section {
     margin: 20px;
@@ -131,6 +136,53 @@ input[type="number"] {
 input[type="checkbox"],
 input[type="radio"] {
     display: none;
+}
+.ex-input {
+    display: grid;
+    grid-template-rows: repeat(2, 30px);
+    grid-template-columns: repeat(5, 25px);
+    position: absolute;
+    grid-gap: 1px;
+    background-color: #9E9E9E;
+    box-shadow: 0 0 5px #212121;
+    border-radius: 2px;
+    overflow: hidden;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-5px);
+    transition: 225ms;
+}
+:focus + .ex-input {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(5px);
+}
+.ex-input > * {
+    text-align: center;
+    line-height: 30px;
+    background-color: #EEE;
+    cursor: pointer;
+    transition: 225ms;
+}
+.ex-input > *:hover {
+    background-color: #E0E0E0;
+}
+/* モバイル */
+@media screen and (max-width: 800px){
+    .ex-input {
+        display: flex;
+        width: 100vw;
+        height: 50px;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        transform: translateY(50px);
+    }
+    .ex-input > * {
+        width: 100%;
+        flex: 1;
+        line-height: 50px;
+    }
 }
 .toggle {
     display: inline-block;
