--- a/style.css
+++ b/style.css
@@ -137,13 +137,46 @@ input[type="checkbox"],
 input[type="radio"] {
     display: none;
 }
-.ex-input {
-    display: grid;
-    grid-template-rows: repeat(2, 30px);
-    grid-template-columns: repeat(5, 25px);
+.invalid-message {
     position: absolute;
-    grid-gap: 1px;
-    background-color: #9E9E9E;
+    background-color: rgba(33, 33, 33, .8);
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 100;
+    padding: 5px;
+    border-radius: 2px;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(10px);
+    transition: 225ms;
+}
+:invalid + .invalid-message {
+    visibility: visible;
+    opacity: 1;
+    animation: showDown 225ms;
+}
+@keyframes showDown {
+    0% {
+        transform: none;
+    }
+    100% {
+        transform: translateY(10px);
+    }
+}
+.invalid-message::before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: -16px;
+    left: 5px;
+    border: 8px solid transparent;
+    border-bottom: 8px solid rgba(33, 33, 33, .8);
+}
+.ex-input {
+    position: absolute;
     box-shadow: 0 0 5px #212121;
     border-radius: 2px;
     overflow: hidden;
@@ -151,6 +184,14 @@ input[type="radio"] {
     opacity: 0;
     transform: translateY(-5px);
     transition: 225ms;
+    z-index: 9999;
+}
+.ex-input.grid {
+    display: grid;
+    grid-template-rows: repeat(2, 30px);
+    grid-template-columns: repeat(5, 25px);
+    grid-gap: 1px;
+    background-color: #9E9E9E;
 }
 :focus + .ex-input {
     visibility: visible;
@@ -167,6 +208,13 @@ input[type="radio"] {
 .ex-input > *:hover {
     background-color: #E0E0E0;
 }
+.ex-input > a {
+    display: block;
+    height: 100%;
+    padding: 10px;
+    color: #000;
+    text-decoration: none;
+}
 /* モバイル */
 @media screen and (max-width: 800px){
     .ex-input {
@@ -178,10 +226,16 @@ input[type="radio"] {
         bottom: 0;
         transform: translateY(50px);
     }
+    :focus + .ex-input {
+        transform: none;
+    }
     .ex-input > * {
         width: 100%;
         flex: 1;
         line-height: 50px;
+    }
+    .ex-input > a {
+        line-height: 30px;
     }
 }
 .toggle {
