--- a/style.css
+++ b/style.css
@@ -77,10 +77,18 @@ header ul li a:hover {
     background-color: rgba(255, 255, 255, .2);
 }
 
-.canvas {
+#canvasArea {
     padding: 20px;
-    max-height: 40vh;
+    max-height: 50vh;
     background-color: #424242;
+}
+#canvasArea canvas {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+}
+[v-cloak] {
+    display: none;
 }
 .form {
     max-width: 1000px;
@@ -151,7 +159,7 @@ input[type="radio"] {
     transform: translateY(10px);
     transition: 225ms;
 }
-:invalid + .invalid-message {
+:invalid:not(:focus) + .invalid-message {
     visibility: visible;
     opacity: 1;
     animation: showDown 225ms;
