--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     background-color: #FAFAFA;
+    user-select: none;
     font-family: 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', '源ノ角ゴシック JP', 'Noto Sans', 'M+ 1c', 游ゴシック体, 'Yu Gothic', YuGothic, メイリオ, Meiryo, sans-serif;
 }
 header {
@@ -110,6 +111,7 @@ label {
     margin: 10px 0;
     display: block;
     width: 100%;
+    cursor: pointer;
 }
 .label-text {
     font-size: .8em;
