--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
 }
+#canvasArea canvas {
+    width: 100%;
+    height: 100%;
+}
 [v-cloak] {
     display: none;
 }
