--- a/style.css
+++ b/style.css
@@ -80,16 +80,12 @@ header ul li a:hover {
 }
 
 #canvasArea {
-    padding: 20px;
     max-height: 50vh;
     background-color: #424242;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-#canvasArea canvas {
-    width: 100%;
-    height: 100%;
+    box-shadow: 0 0 10px #212121;
 }
 [v-cloak] {
     display: none;
