--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ header ul li a:hover {
     max-height: 50vh;
     background-color: #424242;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 5px #212121;
@@ -106,6 +107,25 @@ header ul li a:hover {
     border-bottom: 1px solid #9E9E9E;
 }
 
+button {
+    font-size: 14px;
+    border: 2px solid #212121;
+    outline: 0;
+    background-color: #FAFAFA;
+    color: #000;
+    padding: 5px;
+    border-radius: 2px;
+    cursor: pointer;
+    box-shadow:
+        0 0 #212121 inset,
+        0 0 #212121 inset;
+    transition: 225ms;
+}
+button:hover {
+    box-shadow:
+        0 5px #212121 inset,
+        0 -5px #212121 inset;
+}
 label {
     margin: 10px 0;
     display: block;
