--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+body.scroll-stop {
+    overflow: hidden;
+}
 #canvasArea {
     max-height: 50vh;
     background-color: #616161;
@@ -118,6 +121,152 @@ input[type="number"], input.narrow-input {
 input[type="checkbox"],
 input[type="radio"] {
     display: none;
+}
+.color-picker {
+    margin: 1px;
+    width: 58px;
+    height: 18px;
+    position: relative;
+    border-radius: 1px;
+    border: 1px solid #FAFAFA;
+    box-shadow: 0 0 0 1px #9E9E9E;
+}
+.color-picker::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    display: block;
+    width: 10px;
+    height: 100%;
+    background-color: #FAFAFA;
+}
+.color-picker::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    right: .5px;
+    display: block;
+    width: 0;
+    height: 0;
+    border: 4px solid transparent;
+    border-top-color: #000;
+}
+.color-picker > * {
+    cursor: default;
+}
+.color-picker-back {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #000;
+    opacity: 0;
+    visibility: hidden;
+    transition: 225ms;
+}
+.open .color-picker-back {
+    opacity: .7;
+    visibility: visible;
+}
+.color-picker-body {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 9999;
+    width: 70vw;
+    height: 70vh;
+    background-color: #FAFAFA;
+    border-radius: 2px;
+    visibility: hidden;
+    opacity: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 30px 1fr 30px;
+    transition: 225ms;
+}
+.open .color-picker-body {
+    visibility: visible;
+    opacity: 1;
+}
+/*.color-picker-search {
+    padding: 2px;
+    position: relative;
+}
+.color-picker-search input {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-right: 20px;
+}
+.color-picker-search-clear {
+    position: absolute;
+    top: 0;
+    right: 5px;
+    bottom: 0;
+    margin: auto;
+    width: 20px;
+    height: 20px;
+    opacity: .5;
+    cursor: pointer;
+    transition: 225ms;
+}
+.color-picker-search-clear:hover {
+    opacity: .8;
+}
+.color-picker-search-clear::before, .color-picker-search-clear::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -1px;
+    left: -10px;
+    width: 20px;
+    height: 2px;
+    background-color: #000;
+}
+.color-picker-search-clear::before {
+    transform: translate(10px, 10px) rotate(45deg);
+}
+.color-picker-search-clear::after {
+    transform: translate(10px, 10px) rotate(-45deg);
+}*/
+.color-picker-list {
+    margin: 0;
+    padding: 0 5px;
+    overflow: auto;
+    list-style: none;
+}
+.color-picker-list li {
+    margin: 5px 0;
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    cursor: pointer;
+    transition: .1s;
+}
+.color-picker-list li:active {
+    box-shadow: 0 0 5px #000;
+}
+.color-picker-list-color {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #212121;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.color-picker-list-name {
+    width: 100%;
+    flex: 1;
+    height: 30px;
+    line-height: 30px;
+    padding-left: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .invalid-message {
     position: absolute;
