--- a/main.css
+++ b/main.css
@@ -185,60 +185,25 @@ input[type="radio"] {
     visibility: hidden;
     opacity: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 30px 1fr 30px;
+    grid-template-columns: 1fr 1fr 50px;
+    grid-template-rows: 1fr 30px 50px 30px;
+    grid-template-areas: 
+        "list sv     h     "
+        "list tabs   tabs  "
+        "list input  input "
+        "list others others";
     transition: 225ms;
 }
 .open .color-picker-body {
     visibility: visible;
     opacity: 1;
 }
-/*.color-picker-search {
-    padding: 2px;
-    position: relative;
-}
-.color-picker-search input {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding-right: 20px;
-}
-.color-picker-search-clear {
-    position: absolute;
-    top: 0;
-    right: 5px;
-    bottom: 0;
-    margin: auto;
-    width: 20px;
-    height: 20px;
-    opacity: .5;
-    cursor: pointer;
-    transition: 225ms;
-}
-.color-picker-search-clear:hover {
-    opacity: .8;
-}
-.color-picker-search-clear::before, .color-picker-search-clear::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -1px;
-    left: -10px;
-    width: 20px;
-    height: 2px;
-    background-color: #000;
-}
-.color-picker-search-clear::before {
-    transform: translate(10px, 10px) rotate(45deg);
-}
-.color-picker-search-clear::after {
-    transform: translate(10px, 10px) rotate(-45deg);
-}*/
 .color-picker-list {
     margin: 0;
     padding: 0 5px;
     overflow: auto;
     list-style: none;
+    grid-area: list;
 }
 .color-picker-list li {
     margin: 5px 0;
@@ -267,6 +232,119 @@ input[type="radio"] {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.color-picker-sv {
+    grid-area: sv;
+    display: grid;
+    padding: 15px;
+    grid-template-columns: 1fr 40px;
+    grid-template-rows: 40px 1fr;
+}
+.color-picker-sv-main {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    position: relative;
+    background-image:
+        linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(0, 0, 0)),
+        linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));
+}
+.color-picker-saturation-line, .color-picker-brightness-line {
+    position: absolute;
+    background-color: #9E9E9E;
+}
+.color-picker-saturation-line {
+    bottom: 0;
+    left: -1px;
+    width: 2px;
+    height: calc(100% + 10px);
+}
+.color-picker-brightness-line {
+    bottom: -1px;
+    left: 0;
+    width: calc(100% + 10px);
+    height: 2px;
+}
+.color-picker-sv-point {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #9E9E9E;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.color-picker-s {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    position: relative;
+}
+.color-picker-s-thumb {
+    width: 16px;
+    height: 25px;
+    background-color: #9E9E9E;
+    position: absolute;
+    left: -8px;
+    cursor: pointer;
+}
+.color-picker-s-thumb::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 25px;
+    width: 0;
+    height: 0;
+    border: 8px solid transparent;
+    border-top-color: #9E9E9E;
+}
+.color-picker-v {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    position: relative;
+}
+.color-picker-v-thumb {
+    width: 25px;
+    height: 16px;
+    background-color: #9E9E9E;
+    position: absolute;
+    bottom: -8px;
+    left: 15px;
+    cursor: pointer;
+}
+.color-picker-v-thumb::before {
+    content: "";
+    display: block;
+    position: absolute;
+    right: 25px;
+    width: 0;
+    height: 0;
+    border: 8px solid transparent;
+    border-right-color: #9E9E9E;
+}
+.color-picker-h {
+    grid-area: h;
+    padding: 10px;
+    position: relative;
+}
+.color-picker-h img {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    pointer-events: none;
+}
+.color-picker-h-thumb {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 40px;
+    height: 15px;
+    border: 1px solid #9E9E9E;
+    box-shadow: 0 0 0 2px #FAFAFA;
+    cursor: pointer;
+}
+.color-picker-animation {
+    transition: 225ms;
 }
 .invalid-message {
     position: absolute;
@@ -346,31 +424,6 @@ input[type="radio"] {
     color: #000;
     text-decoration: none;
 }
-/* モバイル */
-@media screen and (max-width: 800px){
-    .ex-input {
-        width: 100vw;
-        height: 50px;
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        transform: translateY(50px);
-    }
-    .ex-input.grid {
-        display: flex;
-    }
-    :focus + .ex-input {
-        transform: none;
-    }
-    .ex-input > * {
-        width: 100%;
-        flex: 1;
-        line-height: 50px;
-    }
-    .ex-input > a {
-        line-height: 30px;
-    }
-}
 .toggle {
     display: inline-block;
     width: 40px;
@@ -410,4 +463,39 @@ input[type="radio"] {
 
 .inline {
     display: inline-block;
+}
+/* モバイル */
+@media screen and (max-width: 800px){
+    .color-picker-body {
+        grid-template-columns: 1fr 50px;
+        grid-template-rows: 1fr 2fr 30px 50px 30px;
+        grid-template-areas: 
+            "list   list"
+            "sv     h     "
+            "tabs   tabs  "
+            "input  input "
+            "others others";
+    }
+    .ex-input {
+        width: 100vw;
+        height: 50px;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        transform: translateY(50px);
+    }
+    .ex-input.grid {
+        display: flex;
+    }
+    :focus + .ex-input {
+        transform: none;
+    }
+    .ex-input > * {
+        width: 100%;
+        flex: 1;
+        line-height: 50px;
+    }
+    .ex-input > a {
+        line-height: 30px;
+    }
 }
