--- a/main.css
+++ b/main.css
@@ -540,6 +540,7 @@ input[type="radio"] {
 
 .inline {
     display: inline-block;
+    vertical-align: bottom;
 }
 /* モバイル */
 @media screen and (max-width: 800px){
